@@ -9,6 +9,7 @@
 
 package org.elasticsearch.action.admin.cluster.snapshots.get;
 
+import org.elasticsearch.ExceptionsHelper;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.ActionType;
 import org.elasticsearch.action.support.ActionFilters;
@@ -19,7 +20,9 @@ import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.SnapshotsInProgress;
 import org.elasticsearch.cluster.block.ClusterBlockException;
 import org.elasticsearch.cluster.block.ClusterBlockLevel;
+import org.elasticsearch.cluster.metadata.ProjectId;
 import org.elasticsearch.cluster.metadata.RepositoryMetadata;
+import org.elasticsearch.cluster.project.ProjectResolver;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.collect.Iterators;
@@ -38,6 +41,7 @@ import org.elasticsearch.repositories.IndexId;
 import org.elasticsearch.repositories.RepositoriesService;
 import org.elasticsearch.repositories.Repository;
 import org.elasticsearch.repositories.RepositoryData;
+import org.elasticsearch.repositories.RepositoryException;
 import org.elasticsearch.repositories.RepositoryMissingException;
 import org.elasticsearch.repositories.ResolvedRepositories;
 import org.elasticsearch.search.sort.SortOrder;
@@ -45,6 +49,7 @@ import org.elasticsearch.snapshots.Snapshot;
 import org.elasticsearch.snapshots.SnapshotId;
 import org.elasticsearch.snapshots.SnapshotInfo;
 import org.elasticsearch.snapshots.SnapshotMissingException;
+import org.elasticsearch.snapshots.SnapshotState;
 import org.elasticsearch.snapshots.SnapshotsService;
 import org.elasticsearch.tasks.CancellableTask;
 import org.elasticsearch.tasks.Task;
@@ -53,7 +58,9 @@ import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.transport.TransportService;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
+import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -61,20 +68,27 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.function.BiPredicate;
 import java.util.function.BooleanSupplier;
 import java.util.function.Predicate;
-import java.util.function.ToLongFunction;
+
+import static org.elasticsearch.action.admin.cluster.snapshots.get.PreflightFilterResult.EXCLUDE;
+import static org.elasticsearch.action.admin.cluster.snapshots.get.PreflightFilterResult.INCLUDE;
+import static org.elasticsearch.action.admin.cluster.snapshots.get.PreflightFilterResult.INCONCLUSIVE;
 
 /**
- * Transport Action for get snapshots operation
+ * Transport action for get-snapshots API
  */
 public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSnapshotsRequest, GetSnapshotsResponse> {
 
     public static final ActionType<GetSnapshotsResponse> TYPE = new ActionType<>("cluster:admin/snapshot/get");
     private static final Logger logger = LogManager.getLogger(TransportGetSnapshotsAction.class);
 
+    private static final EnumSet<SnapshotState> COMPLETED_STATES = EnumSet.copyOf(
+        Arrays.stream(SnapshotState.values()).filter(SnapshotState::completed).toList()
+    );
+
     private final RepositoriesService repositoriesService;
+    private final ProjectResolver projectResolver;
 
     /*
      * [NOTE ON THREADING]
@@ -112,7 +126,8 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
         ClusterService clusterService,
         ThreadPool threadPool,
         RepositoriesService repositoriesService,
-        ActionFilters actionFilters
+        ActionFilters actionFilters,
+        ProjectResolver projectResolver
     ) {
         super(
             TYPE.name(),
@@ -125,11 +140,12 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
             threadPool.executor(ThreadPool.Names.MANAGEMENT) // see [NOTE ON THREADING]
         );
         this.repositoriesService = repositoriesService;
+        this.projectResolver = projectResolver;
     }
 
     @Override
     protected ClusterBlockException checkBlock(GetSnapshotsRequest request, ClusterState state) {
-        return state.blocks().globalBlockedException(ClusterBlockLevel.METADATA_READ);
+        return state.blocks().globalBlockedException(projectResolver.getProjectId(), ClusterBlockLevel.METADATA_READ);
     }
 
     @Override
@@ -141,13 +157,15 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
     ) {
         assert task instanceof CancellableTask : task + " not cancellable";
 
-        final var resolvedRepositories = ResolvedRepositories.resolve(state, request.repositories());
+        final var projectId = projectResolver.getProjectId();
+        final var resolvedRepositories = ResolvedRepositories.resolve(state.metadata().getProject(projectId), request.repositories());
         if (resolvedRepositories.hasMissingRepositories()) {
             throw new RepositoryMissingException(String.join(", ", resolvedRepositories.missing()));
         }
 
         new GetSnapshotsOperation(
             (CancellableTask) task,
+            projectId,
             resolvedRepositories.repositoryMetadata(),
             request.snapshots(),
             request.ignoreUnavailable(),
@@ -160,8 +178,19 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
             request.size(),
             SnapshotsInProgress.get(state),
             request.verbose(),
-            request.includeIndexNames()
+            request.includeIndexNames(),
+            request.states()
         ).runOperation(listener);
+    }
+
+    /// Log a snapshot-info fetch failure (which will be swallowed because {@code ignore_unavailable=true}) at the correct logging level
+    /// depending on Exception. Visible for testing.
+    static void logFetchSnapshotInfoFailure(Logger logger, Object asyncSnapshotInfo, Exception e) {
+        if (ExceptionsHelper.isTaskCancelledException(e)) {
+            logger.debug(() -> Strings.format("failed to fetch snapshot info after cancellation for [%s]", asyncSnapshotInfo), e);
+        } else {
+            logger.warn(() -> Strings.format("failed to fetch snapshot info for [%s]", asyncSnapshotInfo), e);
+        }
     }
 
     /**
@@ -172,24 +201,94 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
      * results.
      */
     private class GetSnapshotsOperation {
+        /*
+         * Overall (conceptual) dataflow:
+         *
+         *     All snapshots (in requested repositories)
+         *         |
+         *         +----------------------------------X  ?from_sort_value (when ?sort = repo)
+         *         |
+         *         +-->  In-progress snapshots
+         *         |         |
+         *         |         +------------------------X  snapshotNamePredicate (requested names/wildcards)
+         *         |         |
+         *         |         +-->  Synthesize SnapshotInfos for in-progress snapshots --------------------------+
+         *         |                                                                                            |
+         *         +-->  Completed snapshots                                                                    |
+         *                      |                                                                               |
+         *                      +---------------------X  Skipped as also in-progress                            |
+         *                      +---------------------X  snapshotNamePredicate (requested names/wildcards)      |
+         *                      +---------------------X  ?from_sort_value (when ?sort = name/indices)           |
+         *                      |                                                                               |
+         *                      +-->  Look up SnapshotDetails                                                   |
+         *                            |                                                                         |
+         *                            | Preflight filtering (may be incomplete)                                 |
+         *                            +---------------X  ?from_sort_value (when ?sort = start/duration)         |
+         *                            +---------------X  ?state                                                 |
+         *                            +---------------X  ?slm_policy_filter                                     |
+         *                            |                                                                         |
+         *                            | (proceed if preflight result is INCLUDE or INCONCLUSIVE)                |
+         *                            |                                                                         |
+         *                            |                                                                         |
+         *                            |                                                                         |
+         *                            |      We might be able to tell here if it'll pass real filtering         |
+         *                            |      but be skipped due to ?after, so we could add it to total          |
+         *                            |      and then skip loading its SnapshotInfo (TODO).                     |
+         *                            |                                                                         |
+         *                            |      We might be able to tell here if it'll pass real filtering         |
+         *                            |      and ?after but there will be ≥offset+size earlier-sorting          |
+         *                            |      snapshots so we could add it to total & remaining and skip         |
+         *                            |      loading its SnapshotInfo (TODO).                                   |
+         *                            |                                                                         |
+         *                            |      Harder: we might even be able to tell here if it'll pass           |
+         *                            |      real filtering and ?after but there will be <offset                |
+         *                            |      earlier-sorting snapshots so we could add it to total and          |
+         *                            |      then skip loading its SnapshotInfo (TODO).                         |
+         *                            |                                                                         |
+         *                            |                                                                         |
+         *                            |                                                                         |
+         *                            +-->  Load SnapshotInfos for completed snapshots -------------------------+
+         *                                                                                                      |
+         *     SnapshotInfos (merged) <-------------------------------------------------------------------------+
+         *         |
+         *         | Real filtering (for when SnapshotDetails incomplete/insufficient)
+         *         +----------------------------------X  ?from_sort_value
+         *         +----------------------------------X  ?state
+         *         +----------------------------------X  ?slm_policy_filter
+         *         |
+         *         +-->  Counted in total
+         *               |
+         *               +----------------------------X  Skipped due to ?after
+         *               |
+         *               +---> Not already returned - added to SnapshotInfoCollector
+         *                     |
+         *                     +----------------------X  Skipped due to ?offset
+         *                     +--------------------------------------------------------------------------------+
+         *                     +----------------------X  Omitted due to ?size (counted in remaining)            |
+         *                                                                                                      |
+         *                                                                                                      |
+         *                                                  RESULTS <-------------------------------------------+
+         */
+
         private final CancellableTask cancellableTask;
 
+        private final ProjectId projectId;
         // repositories
         private final List<RepositoryMetadata> repositories;
 
         // snapshots selection
         private final SnapshotNamePredicate snapshotNamePredicate;
-        private final SnapshotPredicates fromSortValuePredicates;
+        private final FromSortValuePredicates fromSortValuePredicates;
         private final Predicate<String> slmPolicyPredicate;
+        private final EnumSet<SnapshotState> states;
+        private final boolean matchAllCompletedStates;
 
         // snapshot ordering/pagination
         private final SnapshotSortKey sortBy;
         private final SortOrder order;
         @Nullable
         private final String fromSortValue;
-        private final int offset;
-        private final Predicate<SnapshotInfo> afterPredicate;
-        private final int size;
+        private final AfterPredicates afterPredicates;
 
         // current state
         private final SnapshotsInProgress snapshotsInProgress;
@@ -203,7 +302,7 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
         private final GetSnapshotInfoExecutor getSnapshotInfoExecutor;
 
         // results
-        private final List<SnapshotInfo> allSnapshotInfos = Collections.synchronizedList(new ArrayList<>());
+        private final SnapshotInfoCollector snapshotInfoCollector;
 
         /**
          * Accumulates number of snapshots that match the name/fromSortValue/slmPolicy predicates, to be returned in the response.
@@ -212,6 +311,7 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
 
         GetSnapshotsOperation(
             CancellableTask cancellableTask,
+            ProjectId projectId,
             List<RepositoryMetadata> repositories,
             String[] snapshots,
             boolean ignoreUnavailable,
@@ -220,33 +320,37 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
             SortOrder order,
             String fromSortValue,
             int offset,
-            SnapshotSortKey.After after,
+            After after,
             int size,
             SnapshotsInProgress snapshotsInProgress,
             boolean verbose,
-            boolean indices
+            boolean indices,
+            EnumSet<SnapshotState> states
         ) {
             this.cancellableTask = cancellableTask;
+            this.projectId = projectId;
             this.repositories = repositories;
             this.ignoreUnavailable = ignoreUnavailable;
             this.sortBy = sortBy;
             this.order = order;
             this.fromSortValue = fromSortValue;
-            this.offset = offset;
-            this.size = size;
             this.snapshotsInProgress = snapshotsInProgress;
             this.verbose = verbose;
             this.indices = indices;
+            this.states = states;
+            this.matchAllCompletedStates = states.containsAll(COMPLETED_STATES);
 
             this.snapshotNamePredicate = SnapshotNamePredicate.forSnapshots(ignoreUnavailable, snapshots);
-            this.fromSortValuePredicates = SnapshotPredicates.forFromSortValue(fromSortValue, sortBy, order);
+            this.fromSortValuePredicates = FromSortValuePredicates.forFromSortValue(fromSortValue, sortBy, order);
             this.slmPolicyPredicate = SlmPolicyPredicate.forPolicies(policies);
-            this.afterPredicate = sortBy.getAfterPredicate(after, order);
+            this.afterPredicates = AfterPredicates.forAfter(after, sortBy, order);
 
             this.getSnapshotInfoExecutor = new GetSnapshotInfoExecutor(
                 threadPool.info(ThreadPool.Names.SNAPSHOT_META).getMax(),
                 cancellableTask::isCancelled
             );
+
+            this.snapshotInfoCollector = SnapshotInfoCollector.create(sortBy.getSnapshotInfoComparator(order), size, offset);
 
             if (verbose == false) {
                 assert fromSortValuePredicates.isMatchAll() : "filtering is not supported in non-verbose mode";
@@ -262,7 +366,7 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
                 .addListener(
                     listener.map(ignored -> buildResponse()),
                     // If we didn't load any SnapshotInfo blobs from the repo (e.g. verbose=false or current-snapshots-only) then this
-                    // listener chain will already be complete, no need to fork again. Otherwise we forked to SNAPSHOT_META so must
+                    // listener chain will already be complete, no need to fork again. Otherwise, we forked to SNAPSHOT_META so must
                     // fork back to MANAGEMENT for the final step.
                     executor,
                     threadPool.getThreadContext()
@@ -270,7 +374,7 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
         }
 
         /**
-         * Populate the results fields ({@link #allSnapshotInfos} and {@link #totalCount}).
+         * Populate the results fields ({@link #snapshotInfoCollector} and {@link #totalCount}).
          */
         private void populateResults(ActionListener<Void> listener) {
             try (var listeners = new RefCountingListener(listener)) {
@@ -285,12 +389,28 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
                         ),
                         repositoryName -> asyncRepositoryContentsListener -> SubscribableListener
 
-                            .<RepositoryData>newForked(l -> maybeGetRepositoryData(repositoryName, l))
+                            .<RepositoryData>newForked(
+                                l -> maybeGetRepositoryData(
+                                    repositoryName,
+                                    l.delegateResponse(
+                                        (ll, e) -> ll.onFailure(
+                                            new RepositoryException(
+                                                repositoryName,
+                                                "cannot retrieve snapshots list from this repository",
+                                                e
+                                            )
+                                        )
+                                    )
+                                )
+                            )
                             .andThenApply(repositoryData -> {
                                 assert ThreadPool.assertCurrentThreadPool(ThreadPool.Names.MANAGEMENT);
                                 cancellableTask.ensureNotCancelled();
                                 ensureRequiredNamesPresent(repositoryName, repositoryData);
-                                return getAsyncSnapshotInfoIterator(repositoriesService.repository(repositoryName), repositoryData);
+                                return getAsyncSnapshotInfoIterator(
+                                    repositoriesService.repository(projectId, repositoryName),
+                                    repositoryData
+                                );
                             })
                             .addListener(asyncRepositoryContentsListener)
                     ),
@@ -311,8 +431,8 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
                                         public void onResponse(SnapshotInfo snapshotInfo) {
                                             if (matchesPredicates(snapshotInfo)) {
                                                 totalCount.incrementAndGet();
-                                                if (afterPredicate.test(snapshotInfo)) {
-                                                    allSnapshotInfos.add(snapshotInfo.maybeWithoutIndices(indices));
+                                                if (afterPredicates.test(snapshotInfo)) {
+                                                    snapshotInfoCollector.add(snapshotInfo.maybeWithoutIndices(indices));
                                                 }
                                             }
                                             refListener.onResponse(null);
@@ -321,7 +441,7 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
                                         @Override
                                         public void onFailure(Exception e) {
                                             if (ignoreUnavailable) {
-                                                logger.warn(Strings.format("failed to fetch snapshot info for [%s]", asyncSnapshotInfo), e);
+                                                logFetchSnapshotInfoFailure(logger, asyncSnapshotInfo, e);
                                                 refListener.onResponse(null);
                                             } else {
                                                 refListener.onFailure(e);
@@ -342,7 +462,7 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
             if (snapshotNamePredicate == SnapshotNamePredicate.MATCH_CURRENT_ONLY) {
                 listener.onResponse(null);
             } else {
-                repositoriesService.repository(repositoryName).getRepositoryData(executor, listener);
+                repositoriesService.repository(projectId, repositoryName).getRepositoryData(executor, listener);
             }
         }
 
@@ -366,7 +486,7 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
             }
 
             final var unmatchedRequiredNames = new HashSet<>(snapshotNamePredicate.requiredNames());
-            for (final var snapshotInProgress : snapshotsInProgress.forRepo(repositoryName)) {
+            for (final var snapshotInProgress : snapshotsInProgress.forRepo(projectId, repositoryName)) {
                 unmatchedRequiredNames.remove(snapshotInProgress.snapshot().getSnapshotId().getName());
             }
             if (unmatchedRequiredNames.isEmpty()) {
@@ -444,7 +564,7 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
                         ActionListener.completeWith(
                             listener,
                             () -> new SnapshotInfo(
-                                new Snapshot(repository.getMetadata().name(), snapshotId),
+                                new Snapshot(repository.getProjectId(), repository.getMetadata().name(), snapshotId),
                                 indicesLookup.getOrDefault(snapshotId, Collections.emptyList()),
                                 Collections.emptyList(),
                                 Collections.emptyList(),
@@ -470,18 +590,15 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
             final var indicesLookup = getIndicesLookup(repositoryData);
             return Iterators.concat(
                 // matching in-progress snapshots first
-                Iterators.map(
-                    Iterators.filter(snapshotsInProgress.forRepo(repository.getMetadata().name()).iterator(), snapshotInProgress -> {
-                        final var snapshotId = snapshotInProgress.snapshot().getSnapshotId();
-                        if (snapshotNamePredicate.test(snapshotId.getName(), true)) {
-                            matchingInProgressSnapshots.add(snapshotId);
-                            return true;
-                        } else {
-                            return false;
-                        }
-                    }),
-                    this::forSnapshotInProgress
-                ),
+                Iterators.map(Iterators.filter(snapshotsInProgress.forRepo(repository.getProjectRepo()).iterator(), snapshotInProgress -> {
+                    final var snapshotId = snapshotInProgress.snapshot().getSnapshotId();
+                    if (snapshotNamePredicate.test(snapshotId.getName(), true)) {
+                        matchingInProgressSnapshots.add(snapshotId);
+                        return true;
+                    } else {
+                        return false;
+                    }
+                }), this::forSnapshotInProgress),
                 repositoryData == null
                     // Only returning in-progress snapshots:
                     ? Collections.emptyIterator()
@@ -493,14 +610,13 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
                             repositoryData.getSnapshotIds().iterator(),
                             snapshotId -> matchingInProgressSnapshots.contains(snapshotId) == false
                                 && snapshotNamePredicate.test(snapshotId.getName(), false)
-                                && matchesPredicates(snapshotId, repositoryData)
+                                && matchesPredicates(snapshotId, repositoryData) != EXCLUDE
                         ),
                         snapshotId -> forCompletedSnapshot(repository, snapshotId, repositoryData, indicesLookup)
                     )
             );
         }
 
-        @Nullable
         private Map<SnapshotId, List<String>> getIndicesLookup(RepositoryData repositoryData) {
             if (repositoryData == null || verbose || indices == false) {
                 return Map.of();
@@ -509,8 +625,9 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
             final Map<SnapshotId, List<String>> snapshotsToIndices = new HashMap<>();
             for (IndexId indexId : repositoryData.getIndices().values()) {
                 for (SnapshotId snapshotId : repositoryData.getSnapshots(indexId)) {
-                    if (snapshotNamePredicate.test(snapshotId.getName(), false) && matchesPredicates(snapshotId, repositoryData)) {
-                        snapshotsToIndices.computeIfAbsent(snapshotId, (k) -> new ArrayList<>()).add(indexId.getName());
+                    if (snapshotNamePredicate.test(snapshotId.getName(), false)
+                        && matchesPredicates(snapshotId, repositoryData) != EXCLUDE) {
+                        snapshotsToIndices.computeIfAbsent(snapshotId, ignored -> new ArrayList<>()).add(indexId.getName());
                     }
                 }
             }
@@ -520,54 +637,85 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
         private GetSnapshotsResponse buildResponse() {
             assert ThreadPool.assertCurrentThreadPool(ThreadPool.Names.MANAGEMENT); // see [NOTE ON THREADING]
             cancellableTask.ensureNotCancelled();
-            int remaining = 0;
-            final var resultsStream = allSnapshotInfos.stream()
-                .peek(this::assertSatisfiesAllPredicates)
-                .sorted(sortBy.getSnapshotInfoComparator(order))
-                .skip(offset);
-            final List<SnapshotInfo> snapshotInfos;
-            if (size == GetSnapshotsRequest.NO_LIMIT || allSnapshotInfos.size() <= size) {
-                snapshotInfos = resultsStream.toList();
-            } else {
-                snapshotInfos = new ArrayList<>(size);
-                for (var iterator = resultsStream.iterator(); iterator.hasNext();) {
-                    final var snapshotInfo = iterator.next();
-                    if (snapshotInfos.size() < size) {
-                        snapshotInfos.add(snapshotInfo);
-                    } else {
-                        remaining += 1;
-                    }
-                }
-            }
+            final var snapshotInfos = snapshotInfoCollector.getSnapshotInfos();
+            assert assertSatisfiesAllPredicates(snapshotInfos);
+            final int remaining = snapshotInfoCollector.getRemaining();
             return new GetSnapshotsResponse(
                 snapshotInfos,
-                remaining > 0 ? sortBy.encodeAfterQueryParam(snapshotInfos.get(snapshotInfos.size() - 1)) : null,
+                remaining > 0 ? After.fromSnapshotInfo(snapshotInfos.getLast(), sortBy).toQueryParam() : null,
                 totalCount.get(),
                 remaining
             );
         }
 
-        private void assertSatisfiesAllPredicates(SnapshotInfo snapshotInfo) {
-            assert matchesPredicates(snapshotInfo);
-            assert afterPredicate.test(snapshotInfo);
-            assert indices || snapshotInfo.indices().isEmpty();
+        private boolean assertSatisfiesAllPredicates(List<SnapshotInfo> snapshotInfos) {
+            snapshotInfos.forEach(snapshotInfo -> {
+                assert matchesPredicates(snapshotInfo);
+                assert afterPredicates.test(snapshotInfo);
+                assert indices || snapshotInfo.indices().isEmpty();
+            });
+            return true;
         }
 
-        private boolean matchesPredicates(SnapshotId snapshotId, RepositoryData repositoryData) {
-            if (fromSortValuePredicates.test(snapshotId, repositoryData) == false) {
-                return false;
+        private PreflightFilterResult matchesPredicates(SnapshotId snapshotId, RepositoryData repositoryData) {
+            final var fromSortValueResult = fromSortValuePredicates.test(snapshotId, repositoryData);
+            if (fromSortValueResult == EXCLUDE) {
+                return EXCLUDE;
             }
 
-            if (slmPolicyPredicate == SlmPolicyPredicate.MATCH_ALL_POLICIES) {
-                return true;
+            if (matchAllCompletedStates && slmPolicyPredicate == SlmPolicyPredicate.MATCH_ALL_POLICIES) {
+                return fromSortValueResult;
             }
 
             final var details = repositoryData.getSnapshotDetails(snapshotId);
-            return details == null || details.getSlmPolicy() == null || slmPolicyPredicate.test(details.getSlmPolicy());
+            if (details == null) {
+                return INCONCLUSIVE;
+            }
+
+            final var statesFilterResult = testStatesFilter(details);
+            if (statesFilterResult == EXCLUDE) {
+                return EXCLUDE;
+            }
+
+            final var slmPolicyResult = testSlmPolicy(details);
+            if (slmPolicyResult == EXCLUDE) {
+                return EXCLUDE;
+            }
+
+            if (fromSortValueResult == INCONCLUSIVE || statesFilterResult == INCONCLUSIVE || slmPolicyResult == INCONCLUSIVE) {
+                return INCONCLUSIVE;
+            }
+            return INCLUDE;
+        }
+
+        private PreflightFilterResult testStatesFilter(RepositoryData.SnapshotDetails details) {
+            if (matchAllCompletedStates) {
+                return INCLUDE;
+            }
+            final var snapshotState = details.getSnapshotState();
+            if (snapshotState == null) {
+                return INCONCLUSIVE;
+            }
+            return states.contains(snapshotState) ? INCLUDE : EXCLUDE;
+        }
+
+        private PreflightFilterResult testSlmPolicy(RepositoryData.SnapshotDetails details) {
+            if (slmPolicyPredicate == SlmPolicyPredicate.MATCH_ALL_POLICIES) {
+                return INCLUDE;
+            }
+            final var slmPolicy = details.getSlmPolicy();
+            if (slmPolicy == null) {
+                return INCONCLUSIVE;
+            }
+            return slmPolicyPredicate.test(slmPolicy) ? INCLUDE : EXCLUDE;
         }
 
         private boolean matchesPredicates(SnapshotInfo snapshotInfo) {
             if (fromSortValuePredicates.test(snapshotInfo) == false) {
+                return false;
+            }
+
+            if (snapshotInfo.state() != null && states.contains(snapshotInfo.state()) == false) {
                 return false;
             }
 
@@ -579,143 +727,6 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
             return slmPolicyPredicate.test(
                 metadata != null && metadata.get(SnapshotsService.POLICY_ID_METADATA_FIELD) instanceof String s ? s : ""
             );
-        }
-    }
-
-    /**
-     * A pair of predicates for the get snapshots action. The {@link #test(SnapshotId, RepositoryData)} predicate is applied to combinations
-     * of snapshot id and repository data to determine which snapshots to fully load from the repository and rules out all snapshots that do
-     * not match the given {@link GetSnapshotsRequest} that can be ruled out through the information in {@link RepositoryData}.
-     * The predicate returned by {@link #test(SnapshotInfo)} predicate is then applied the instances of {@link SnapshotInfo} that were
-     * loaded from the repository to filter out those remaining that did not match the request but could not be ruled out without loading
-     * their {@link SnapshotInfo}.
-     */
-    private static final class SnapshotPredicates {
-
-        private static final SnapshotPredicates MATCH_ALL = new SnapshotPredicates(null, null);
-
-        @Nullable // if all snapshot IDs match
-        private final BiPredicate<SnapshotId, RepositoryData> preflightPredicate;
-
-        @Nullable // if all snapshots match
-        private final Predicate<SnapshotInfo> snapshotPredicate;
-
-        private SnapshotPredicates(
-            @Nullable BiPredicate<SnapshotId, RepositoryData> preflightPredicate,
-            @Nullable Predicate<SnapshotInfo> snapshotPredicate
-        ) {
-            this.snapshotPredicate = snapshotPredicate;
-            this.preflightPredicate = preflightPredicate;
-        }
-
-        boolean test(SnapshotId snapshotId, RepositoryData repositoryData) {
-            return preflightPredicate == null || preflightPredicate.test(snapshotId, repositoryData);
-        }
-
-        boolean isMatchAll() {
-            return snapshotPredicate == null;
-        }
-
-        boolean test(SnapshotInfo snapshotInfo) {
-            return snapshotPredicate == null || snapshotPredicate.test(snapshotInfo);
-        }
-
-        static SnapshotPredicates forFromSortValue(String fromSortValue, SnapshotSortKey sortBy, SortOrder order) {
-            if (fromSortValue == null) {
-                return MATCH_ALL;
-            }
-
-            switch (sortBy) {
-                case START_TIME:
-                    final long after = Long.parseLong(fromSortValue);
-                    return new SnapshotPredicates(order == SortOrder.ASC ? (snapshotId, repositoryData) -> {
-                        final long startTime = getStartTime(snapshotId, repositoryData);
-                        return startTime == -1 || after <= startTime;
-                    } : (snapshotId, repositoryData) -> {
-                        final long startTime = getStartTime(snapshotId, repositoryData);
-                        return startTime == -1 || after >= startTime;
-                    }, filterByLongOffset(SnapshotInfo::startTime, after, order));
-
-                case NAME:
-                    return new SnapshotPredicates(
-                        order == SortOrder.ASC
-                            ? (snapshotId, repositoryData) -> fromSortValue.compareTo(snapshotId.getName()) <= 0
-                            : (snapshotId, repositoryData) -> fromSortValue.compareTo(snapshotId.getName()) >= 0,
-                        null
-                    );
-
-                case DURATION:
-                    final long afterDuration = Long.parseLong(fromSortValue);
-                    return new SnapshotPredicates(order == SortOrder.ASC ? (snapshotId, repositoryData) -> {
-                        final long duration = getDuration(snapshotId, repositoryData);
-                        return duration == -1 || afterDuration <= duration;
-                    } : (snapshotId, repositoryData) -> {
-                        final long duration = getDuration(snapshotId, repositoryData);
-                        return duration == -1 || afterDuration >= duration;
-                    }, filterByLongOffset(info -> info.endTime() - info.startTime(), afterDuration, order));
-
-                case INDICES:
-                    final int afterIndexCount = Integer.parseInt(fromSortValue);
-                    return new SnapshotPredicates(
-                        order == SortOrder.ASC
-                            ? (snapshotId, repositoryData) -> afterIndexCount <= indexCount(snapshotId, repositoryData)
-                            : (snapshotId, repositoryData) -> afterIndexCount >= indexCount(snapshotId, repositoryData),
-                        null
-                    );
-
-                case REPOSITORY:
-                    // already handled in #maybeFilterRepositories
-                    return MATCH_ALL;
-
-                case SHARDS:
-                    return new SnapshotPredicates(
-                        null,
-                        filterByLongOffset(SnapshotInfo::totalShards, Integer.parseInt(fromSortValue), order)
-                    );
-                case FAILED_SHARDS:
-                    return new SnapshotPredicates(
-                        null,
-                        filterByLongOffset(SnapshotInfo::failedShards, Integer.parseInt(fromSortValue), order)
-                    );
-                default:
-                    throw new AssertionError("unexpected sort column [" + sortBy + "]");
-            }
-        }
-
-        private static Predicate<SnapshotInfo> filterByLongOffset(ToLongFunction<SnapshotInfo> extractor, long after, SortOrder order) {
-            return order == SortOrder.ASC ? info -> after <= extractor.applyAsLong(info) : info -> after >= extractor.applyAsLong(info);
-        }
-
-        private static long getDuration(SnapshotId snapshotId, RepositoryData repositoryData) {
-            final RepositoryData.SnapshotDetails details = repositoryData.getSnapshotDetails(snapshotId);
-            if (details == null) {
-                return -1;
-            }
-            final long startTime = details.getStartTimeMillis();
-            if (startTime == -1) {
-                return -1;
-            }
-            final long endTime = details.getEndTimeMillis();
-            if (endTime == -1) {
-                return -1;
-            }
-            return endTime - startTime;
-        }
-
-        private static long getStartTime(SnapshotId snapshotId, RepositoryData repositoryData) {
-            final RepositoryData.SnapshotDetails details = repositoryData.getSnapshotDetails(snapshotId);
-            return details == null ? -1 : details.getStartTimeMillis();
-        }
-
-        private static int indexCount(SnapshotId snapshotId, RepositoryData repositoryData) {
-            // TODO: this could be made more efficient by caching this number in RepositoryData
-            int indexCount = 0;
-            for (IndexId idx : repositoryData.getIndices().values()) {
-                if (repositoryData.getSnapshots(idx).contains(snapshotId)) {
-                    indexCount++;
-                }
-            }
-            return indexCount;
         }
     }
 
@@ -760,7 +771,7 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
 
         @Override
         public boolean test(String policy) {
-            if (policy.equals("")) {
+            if (policy.isEmpty()) {
                 // empty string means that snapshot was not created by an SLM policy
                 return matchWithoutPolicy;
             }
